--- a/home/hero.html
+++ b/home/hero.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/styles/defaults.css">
+<link rel="stylesheet" href="/style.css">
 
 <div class="custom-hero-section">
     <div class="header-left-container">
@@ -55,167 +55,3 @@
     }
 
 </script>
-
-<style>
-    .custom-hero-section .header-left-container {
-        padding-top: 90px;
-        min-height: calc(100vh - 100px);
-    }
-
-    @media(min-width: 992px) {
-        .custom-hero-section .header-left-container {
-            padding-left: 2rem;
-        }
-    }
-
-    .custom-hero-section h1,
-    .custom-hero-section h3 {
-        font-family: abel;
-        font-weight: 500;
-    }
-
-    .custom-hero-section h1 {
-        font-family: "Dm Serif Display", serif;
-        font-weight: 700;
-        color: var(--red);
-        text-shadow: 2px 2px 0 #6c6a6a, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-        font-size: 3.5rem;
-        line-height: 3.8rem;
-        margin-bottom: 2rem;
-        width: 100%;
-        text-align: center;
-    }
-
-    .h-txt-container {
-        padding: .5rem;
-        background-color: rgba(0, 0, 0, 0.1);
-        border-radius: 10px;
-        backdrop-filter: blur(20px);
-        width: 60vw;
-        margin: 20px auto;
-        position: absolute;
-        bottom: 20px;
-    }
-
-    .h-txt-container p {
-        color: white;
-        font-size: 18px;
-        font-weight: bold;
-        font-family: nunito;
-        line-height: 30px;
-        text-align: center;
-        cursor: pointer;
-    }
-
-    @media(min-width: 992px) {
-        .h-txt-container p {
-            color: var(--text-color-1);
-        }
-    }
-
-
-    .custom-hero-section h3.h-h3 {
-        padding: 10px 0px;
-        text-align: center;
-        font-family: nunito;
-    }
-
-    .header-left {
-        margin-right: auto;
-        margin-left: auto
-    }
-
-    .header-left-info p {
-        text-align: center;
-    }
-
-    .header-right-image {
-        width: fit-content;
-        margin: 0px auto;
-    }
-
-    .header-right img {
-        height: 100vh;
-        object-position: right;
-        object-fit: contain;
-    }
-
-
-    .header-left-quiz {
-        margin: 2rem 0px;
-    }
-
-    .h-call-button {
-        margin-bottom: 20px;
-    }
-
-    .header-left-info p {
-        color: var(--blue);
-        font-size: 20px;
-        cursor: pointer;
-    }
-
-    @media(max-width: 992px) {
-        .body-wrapper.page {
-            margin: 10px 0px;
-        }
-
-        .custom-hero-section h1 {
-            font-size: 2.6rem;
-            background: radial-gradient(#ffffff89, #ffffff43, #ffffff00);
-        }
-
-        .custom-hero-section h3.h-h3 {
-            font-size: 1.2rem;
-        }
-
-        .custom-hero-section {
-            background-color: white;
-
-        }
-
-        .header-left {
-            max-width: 540px;
-        }
-
-        .header-right {
-            display: none;
-        }
-
-        .custom-hero-section {
-            background-image: url(https://allforeclosures.ca/images/black-man-holding-minihouse.png);
-            background-size: contain;
-            background-position: right;
-            background-repeat: no-repeat;
-        }
-
-        .header-left-container {
-            background-color: #ffffff37;
-        }
-
-        .header-left-container h1 {
-            background: transparent;
-        }
-
-        section#guide-section {
-            background-color: white;
-        }
-    }
-
-    @media(min-width: 992px) {
-        .custom-hero-section {
-            display: grid;
-            grid-template-columns: auto 1fr;
-        }
-
-        .header-left {
-            max-width: 720px
-        }
-    }
-
-    @media(min-width: 1200px) {
-        .header-left {
-            max-width: 840px
-        }
-    }
-</style>
