--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="h-right-txt">
                     <div class="name">Justin Iyizoba</div>
                     <dic class="qualification">
-                        MBA Economic Statistics
+                        Bsc|Msc {Economics}
                     </dic>
                 </div>
             </div>
