--- a/home/guide.html
+++ b/home/guide.html
@@ -1,96 +1,73 @@
 <link rel="stylesheet" href="/style.css">
-<section id="guide-section">
-    <div id="saleGuarantee">
 
-        <section id="guide">
-            <h1>It’s So Easy. And It’s Guaranteed!</h1>
-            <div class="guide-container">
-                <article class="guide-card">
-                    <div class="guide-txt">
-                        <h3>CALL US</h3>
-                    </div>
-                    <div class="guide-img">
-                        <img src="https://allforeclosures.ca/images/call-helpdesk.svg" loading="lazy" alt="">
-                    </div>
-                    <div class="guide-txt">
+<div class="container">
 
-                        <li>No Obligation to Sell</li>
-                        <li>No Pressure</li>
-                        <li>No Risk</li>
+    <h1 class="title">Fearless Home buying: Conquering Real Estate Risks</h1>
+    <div class="why-us-container fearless">
+        <div class="why-us-page-card">
+            <img src="https://cdn-websites.agentlocator.ca/13009/Menu/buyWithUs1.png" alt="" class="fr-fic fr-dii">
 
-                    </div>
-                </article>
-                <article class="guide-card">
-                    <div class="guide-txt">
-                        <h3>GET HOME VALUATION</h3>
-                    </div>
-                    <div class="guide-img">
-                        <img src="https://allforeclosures.ca/images/house-evaluation.svg" alt="">
-                    </div>
-                    <div class="guide-txt">
+            <p><strong>Buying a problem house</strong></p>
 
-                        <li>No Obligation to Sell</li>
-                        <li>No Cost</li>
-                        <li>No Risk</li>
-
-                    </div>
-                </article>
-                <article class="guide-card">
-                    <div class="guide-txt">
-                        <h3>GET CASH OFFER</h3>
-                    </div>
-                    <div class="guide-img">
-                        <img src="https://allforeclosures.ca/images/money-cash.png" alt="" loading="lazy">
-                    </div>
-                    <div class="guide-txt">
-
-                        <li>No Obligation to Sell</li>
-                        <li>No Commitment</li>
-                        <li>No Risk</li>
-
-                    </div>
-                </article>
-            </div>
-        </section>
-        <form class="guide-search-bar" action="#" method="post">
-            <div class="input-container">
-                <i class="fa-solid fa-location-dot"></i>
-                <input type="text" name="address" id="search-input" placeholder="Enter your address" required=""
-                    autocomplete="off">
-            </div>
-            <button class="guide-search-btn">
-                Instant Evaluation
-            </button>
-        </form>
-    </div>
-
-</section>
-<section id="about">
-    <div class="about about-1">
-        <div class="about-img">
-            <img src="https://allforeclosures.ca/images/couple-signing-paperwork.jpg" alt="">
+            <p>The fear of buying a house with hidden or unknown problems</p>
         </div>
-        <div class="about-text">
-            <h2>Sell to Us</h2>
-            <p>No showings! Choose a moving day that’s best for you. We pay 90% of current value PLUS
-                90% of any
-                overage if we resell for more than appraised! All commissions + fees are built in. It’s
-                the easiest
-                way to sell!</p>
-            <div><a href="/sell" class="get-started-btn">SELL TO US</a></div>
+        <div class="why-us-page-card">
+            <img src="https://cdn-websites.agentlocator.ca/13009/Menu/buyWithUs2.png" alt="" class="fr-fic fr-dii">
+
+            <p><strong>Affordability</strong></p>
+
+            <p>The fear of not being able to afford the home, or not being able to make the payments on the mortgage.
+            </p>
+        </div>
+        <div class="why-us-page-card">
+            <img src="https://cdn-websites.agentlocator.ca/13009/Menu/buyWithUs3.png" alt="" class="fr-fic fr-dii">
+
+            <p><strong>Location</strong></p>
+
+            <p>The fear of not being able to find the right location or not being able to find a home in the desired
+                area.</p>
+        </div>
+        <div class="why-us-page-card">
+            <img src="https://cdn-websites.agentlocator.ca/13009/Menu/buyWithUs4.png" alt="" class="fr-fic fr-dii">
+
+            <p><strong>Maintenance&nbsp;</strong></p>
+
+            <p>The fear of not being able to keep up with maintenance and repairs.</p>
+        </div>
+        <div class="why-us-page-card">
+            <img src="https://cdn-websites.agentlocator.ca/13009/Menu/buyWithUs5.png" alt="" class="fr-fic fr-dii">
+
+            <p><strong>Homeowners&#39; Association</strong></p>
+
+            <p>The fear of not understanding the rules and regulations of the homeowners&#39; association.</p>
+        </div>
+        <div class="why-us-page-card">
+            <img src="https://cdn-websites.agentlocator.ca/13009/Menu/buyWithUs6.png" alt="" class="fr-fic fr-dii">
+
+            <p><strong>Property Taxes</strong></p>
+
+            <p>The fear of not being able to pay the property taxes on a yearly basis.</p>
+        </div>
+        <div class="why-us-page-card">
+            <img src="https://cdn-websites.agentlocator.ca/13009/Menu/buyWithUs7.png" alt="" class="fr-fic fr-dii">
+
+            <p><strong>Hidden Expenses</strong></p>
+
+            <p>The fear of not being able to anticipate the unknown expenses associated with owning a home.</p>
+        </div>
+        <div class="why-us-page-card">
+            <img src="https://cdn-websites.agentlocator.ca/13009/Menu/buyWithUs8.png" alt="" class="fr-fic fr-dii">
+
+            <p><strong>Market Changes</strong></p>
+
+            <p>The fear of not being able to predict market changes and the effect it could have on property values.</p>
+        </div>
+        <div class="why-us-page-card">
+            <img src="https://cdn-websites.agentlocator.ca/13009/Menu/buyWithUs9.png" alt="" class="fr-fic fr-dii">
+
+            <p><strong>Resale Value</strong></p>
+
+            <p>The fear of not being able to resell the home at a price that would cover the cost of the purchase</p>
         </div>
     </div>
-    <h2 class="about-separator">Or</h2>
-    <div class="about about-2">
-        <div class="about-img">
-            <img src="https://allforeclosures.ca/images/blog-image-real-estate-listing-descriptions.webp" alt="">
-        </div>
-        <div class="about-text">
-            <h2>List with us</h2>
-            <p>For a chance to sell your house <strong>ABOVE MARKET VALUE</strong></p>
-            <div>
-                <a href="/sell" class="learn-more-link">Start →</a>
-            </div>
-        </div>
-    </div>
-</section>
+</div>
